# rimru

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: tasks.json
src/: actions.rs  assets.rs  db.rs  game.rs  icon.rs  lib.rs  main.rs  menu.rs  project.rs  settings.rs  theme.rs  ui.rs  workspace.rs
src/db/: history.rs  mod_event.rs  mod_event_store.rs
src/db/history/: event.rs  event_type.rs  store.rs
src/game/: mods.rs  paths.rs  xml.rs
src/game/mods/: config.rs  issue.rs  issues.rs  meta.rs  sort.rs
src/game/mods/meta/: parser.rs  source.rs
src/game/mods/sort/: order.rs
src/settings/: paths.rs
src/ui/: button.rs  components.rs  icon.rs  main_pane.rs  prelude.rs  status_bar.rs  title_bar.rs  traits.rs
src/ui/button/: button_like.rs  icon_button.rs
src/ui/components/: icon.rs  mod_details.rs  mod_list.rs  settings.rs  text_input.rs  tooltip.rs
src/ui/components/button/: button_icon.rs  button_like.rs
src/ui/components/mod_list/: item.rs  list.rs
src/ui/components/text_input/: actions.rs  element.rs  events.rs
src/workspace/: main_pane.rs  status_bar.rs  title_bar.rs
src/workspace/main_pane/: mod_details.rs  mod_list.rs
src/workspace/title_bar/: platforms.rs
