[package]
name = "rimru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.6"
gpui = { git = "https://github.com/zed-industries/zed" }
log = "0.4.26"
rust-embed = { version = "8.6.0", features = ["include-exclude"] }
shellexpand = "3.1.0"
smallvec = "1.14.0"
xml = "0.8.20"
